# Nephrid

./: '  .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  requirements.txt  ruff.toml  rust-toolchain.toml  rustc-ice-2025-01-22T20_49_02-39792.txt  rustc-ice-2025-01-22T20_49_08-57988.txt  rustfmt.toml  shell.nix
.github/skills/add-tunable-param/: SKILL.md
.github/workflows/: ci.yml  test.yml  versioning.yml
benches/: bishop_attacks.rs  bitboard.rs  king.rs  king_attacks.rs  knight.rs  knight_attacks.rs  mcts.rs  pawn.rs  perft.rs  position.rs  queen_attacks.rs  rook_attacks.rs  rook_compute_attacks.rs
benchmarking/: Cargo.toml
benchmarking/benches/: bishop_attacks.rs  bitboard.rs  hce.rs  id.rs  is_pseudo_legal.rs  king.rs  knight.rs  mcts.rs  misc.rs  move_ordering.rs  pawn.rs  perf_eval.rs  perft.rs  position.rs  queen_attacks.rs  rook_attacks.rs
benchmarking/resources/: capture_positions.csv  eret.epd  pawn_positions.csv  popularpos_lichess_v3.epd  positions.csv  rook_positions.csv
engine/: Cargo.toml
engine/src/: lib.rs  math.rs  misc.rs  uci.rs
engine/src/core/: castling.rs  chrono.rs  color.rs  config.rs  coordinates.rs  depth.rs  fen.rs  mod.rs  move.rs  params.rs  piece.rs  ply.rs  turn.rs  zobrist.rs
engine/src/core/bitboard/: mod.rs  tests.rs
engine/src/core/eval/: hce.rs  mod.rs  nnue.rs
engine/src/core/move/: mod.rs  test.rs
engine/src/core/move_iter/: king.rs  knight.rs  mod.rs  queen.rs  staged.rs  test.rs
engine/src/core/move_iter/bishop/: mod.rs  tests.rs
engine/src/core/move_iter/pawn/: helpers.rs  mod.rs
engine/src/core/move_iter/rook/: mod.rs  tests.rs
engine/src/core/move_iter/sliding_piece/: mod.rs
engine/src/core/move_iter/sliding_piece/magics/: mod.rs  seeding.rs  test.rs
engine/src/core/piece/: mod.rs  test.rs
engine/src/core/ply/: test.rs
engine/src/core/position/: mod.rs  test.rs
engine/src/core/position/repetitions/: mod.rs  test.rs
engine/src/core/search/: data.rs  limit.rs  mod.rs  mode.rs  ordering.rs  perft.rs  score.rs  strat.rs  target.rs  tree.rs  tt.rs
engine/src/core/search/id/: mod.rs  test.rs
engine/src/core/search/mcts/: back.rs  eval.rs  limiter.rs  mod.rs  node.rs  search.rs  select.rs  strategy.rs  thread.rs  utils.rs
engine/src/core/search/mcts/eval/: hce.rs  mod.rs  model.py  model.rs  model_only_policy.rs  model_only_value.rs  nn.rs  none.rs  playout.rs  static.rs  static_anal.rs  test.rs
engine/src/core/search/mcts/eval/model.pb/: fingerprint.pb  saved_model.pb
engine/src/core/search/mcts/eval/model.pb/variables/: variables.index
engine/src/core/search/mcts/nn/: mod.rs  test.rs
engine/src/core/search/mcts/node/: mod.rs  test.rs
engine/src/core/search/mcts/noise/: mod.rs  test.rs
engine/src/core/search/mcts/search/: mod.rs  test.rs
engine/src/core/search/mcts/select/: mod.rs  puct.rs  ucb.rs
engine/src/core/search/mcts/test/: fuzz.rs  mod.rs  node.rs  playout_result.rs  tree.rs
engine/src/core/search/mcts/utils/: mod.rs  test.rs
engine/src/core/search/perft/: test.rs
engine/src/core/search/quiesce/: mod.rs
engine/src/core/zobrist/: mod.rs  test.rs
engine/src/uci/: mod.rs  sync.rs  tokens.rs
lab/: Cargo.toml
nephrid/: Cargo.toml
nephrid/src/: main.rs
nephrid/tests/: eret-110_expected.pgn  eret-110_in.epd  game-1_expected.pgn  game-1_in.pgn  integration_tests.rs
resources/datasets/: extract_phase.py  extract_phases.sh
resources/datasets/epd/: endgames.epd  mate_in_1.epd  mate_in_2.epd
resources/datasets/pgn/: mate_in_2.pgn
resources/datasets/phase0/: default.epd
resources/datasets/phase1/: default.epd  extract_phase1.py  mate_in_1_and_2.epd
resources/datasets/phase2/: default.epd
resources/datasets/phase3/: default.epd
resources/datasets/phase4/: default.epd
resources/datasets/phase5/: default.epd
resources/datasets/phase6/: default.epd
resources/datasets/phase7/: default.epd
seeds/: Cargo.toml
seeds/src/: magic_seeds.rs  zobrist_seed.rs
src/: lib.rs  main.rs  misc.rs
src/engine/: bitboard.rs  castling.rs  color.rs  config.rs  coordinates.rs  depth.rs  fen.rs  masks.rs  mod.rs  move.rs  piece.rs  ply.rs  position.rs  turn.rs
src/engine/bitboard/: mod.rs  tests.rs
src/engine/move_gen/: mod.rs
src/engine/move_iter/: bishop.rs  jumping_piece.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  sliding_piece.rs  test.rs
src/engine/move_iter/bishop/: mod.rs  tests.rs
src/engine/move_iter/pawn/: helpers.rs  mod.rs
src/engine/move_iter/rook/: mod.rs  tests.rs
src/engine/move_iter/sliding_piece/: mod.rs
src/engine/move_iter/sliding_piece/magics/: mod.rs  seeding.rs  test.rs
src/engine/position/: mod.rs  repetitions.rs
src/engine/position/repetitions/: mod.rs  test.rs
src/engine/search/: limit.rs  mod.rs  mode.rs  score.rs  target.rs  types.rs
src/engine/search/mcts/: mod.rs
src/engine/search/mcts/test/: mod.rs  node.rs  playout_result.rs  tree.rs
src/engine/transposition_table/: mod.rs
src/engine/zobrist/: mod.rs  seeding.rs
src/macros/: mod.rs
src/uci/: mod.rs  sync.rs  tokens.rs
tuning/: Cargo.toml
tuning/resources/datasets/edp/: mate_in_1.edp  mate_in_2.edp
tuning/src/: eval_model.rs  magic_seeds.rs  nn.rs  zobrist_seed.rs
tuning/src/eval_model/: IDEAS.md  TODOS.md  caching.rs  config-phase1.json  config.json  data.rs  io.rs  log4rs.yml  loss.rs  main.rs  old_config.json  phase0-config.json  phase1-config.json  phase2-config.json  phase3-config.json  phase4-config.json  phase5-config.json  phase6-config.json  phase7-config.json  refactor_plan.md  self_play.rs
tuning/src/eval_model/loss/: el.rs  mlc.rs  slc.rs
tuning/src/eval_model/only_policy/: mod.rs  test.rs
tuning/src/eval_model/only_value/: mod.rs  test.rs
tuning/src/eval_model/test/: config-mate1.json  config-mate2.json  config.json  learn_mate_in_1.json  learn_mate_in_2.json  log4rs.yml  mod.rs
tuning/src/nnue/: main.rs
tuning/src/spsa/: .gitignore
