[workspace]
resolver = "2"
members = [ "benchmarking", "engine", "nephrid", "tuning" ]

[workspace.package]
documentation = "https://github.com/0qln/Nephrid"

[profile.test]
opt-level = 2

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = true
