[workspace]
resolver = "2"
members = [ "benchmarking", "engine", "nephrid", "tuning" ]

[workspace.package]
documentation = "https://github.com/0qln/Nephrid"

[profile.test]
opt-level = 2

[profile.dev]
opt-level = 0

[profile.runtime_check]
inherits = "dev"
opt-level = 0
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true
codegen-units = 1024

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"

[profile.bench]
inherits = "release"
strip = "none"

[profile.profiling]
inherits = "release"
strip = "none"
debug = true
