[package]
name = "engine"
version = "25.11.22+b4b7c55"
edition = "2024"

[dependencies]
const_for = "0.1.5"
impl_ops = "0.1.1"
itertools = "0.14.0"
paste = "1.0.15"
rand = { version = "0.9.0", features = ["small_rng"] }
thiserror = "2.0.11"
burn = { version = "0.19.1", features = ["ndarray"] }
burn-cuda = "0.19.1"
ndarray = "0.17.1"
