[package]
name = "engine"
version = "26.3.22+7e971e2"
edition = "2024"

[dependencies]
const_for = "0.1.5"
impl_ops = "0.1.1"
itertools = "0.14.0"
paste = "1.0.15"
rand = { version = "0.9.0", features = ["small_rng"] }
thiserror = "2.0.11"
burn = { version = "0.19.1", features = ["ndarray"] }
burn-cuda = "0.19.1"
ndarray = "0.17.1"
ringbuf = "0.4.8"
rand_distr = "0.5.1"
approx = "0.5.1"

[features]
default = []

nn-backend-cuda = []
nn-backend-ndarray = []

mcts-pure = []
mcts-nn = []
mcts-sa = []
