[package]
name = "engine"
version = "26.7.3+7b9d086"
edition = "2024"

[dependencies]
const_for = "0.1.5"
impl_ops = "0.1.1"
itertools = "0.14.0"
paste = "1.0.15"
rand = { version = "0.9.0", features = ["small_rng"] }
thiserror = "2.0.11"
burn = { version = "0.19.1", features = ["ndarray"] }
burn-cuda = "0.19.1"
ndarray = "0.17.1"
ringbuf = "0.4.8"
rand_distr = "0.5.1"
approx = "0.5.1"
rustc-hash = "2.1.2"
uom = { version = "0.38.0", features = ["si", "u64"] }
wide = "1.5.0"

[features]
default = []
tunable = []

# fail-high reductions. currently disabled by default since they don't gain elo.
# todo: that is probably due to bad (hce) static evaluation and bad (hce) threat detections. try using this again when nnue is implemented
id-fhr = []

# null move pruning shows to be kinda useluss :), disabled by default
id-nmp = []

[lints]
workspace = true
