[package]
name = "nephrid"
version = "26.6.12+29b6967"
edition = "2024"

[features]

nn-backend-cuda = []
nn-backend-ndarray = []

mcts-pure = []
mcts-nn = []
mcts-hce = []
id-hce = []

tunable = ["engine/tunable"]

default = ["id-hce", "tunable"]

[dependencies]
burn-cuda = "0.21.0"
engine = { version = "*", path = "../engine", default-features = false }
regex = "1.12.3"

[dev-dependencies]
assert_cmd = "2.0"
ntest = "0.9.5"

[lints]
workspace = true
