[package]
name = "nephrid"
version = "26.7.3+7b9d086"
edition = "2024"

[features]

nn-backend-cuda = []
nn-backend-ndarray = []

mcts-pure = []
mcts-nn = []
mcts-hce = []
id-hce = []
id-nnue = ["engine/id-nmp"]

tunable = ["engine/tunable"]

default = ["id-nnue"]

[dependencies]
burn = { version = "0.19.1", features = ["ndarray"] }
burn-cuda = "0.19.1"
engine = { version = "*", path = "../engine", default-features = false }
regex = "1.12.3"

[dev-dependencies]
assert_cmd = "2.0"
ntest = "0.9.5"

[lints]
workspace = true
