[package]
name = "seeds"
edition = "2024"

[dependencies]
engine = { version = "*", path = "../engine", default-features = false, features = ["nn-backend-ndarray", "mcts-hce"] }
itertools = "0.14.0"
rand = "0.9.0"
rayon = "1.11.0"

[[bin]]
name = "zobrist-seed"
path = "src/zobrist_seed.rs"

[[bin]]
name = "magic-seeds"
path = "src/magic_seeds.rs"
