[package]
name = "tuning"
edition = "2024"

[[bin]]
name = "zobrist-seed"
path = "src/zobrist_seed.rs"

[[bin]]
name = "magic-seeds"
path = "src/magic_seeds.rs"

[[bin]]
name = "eval-model"
path = "src/eval_model.rs"

[dependencies]
engine = { version = "*", path = "../engine" }
itertools = "0.14.0"
rand = "0.9.0"
burn = { version = "0.19.1", features = ["train"] }
burn-cuda = "0.19.1"
